add code system

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -13,6 +13,9 @@
     background-repeat: no-repeat;
     background-position: top left, bottom right;
 }
+.secondary-bg{
+    background-color: #FFF8F3;
+}
 /* shared style*/
 .text-primary{
     color: #FD6E0A;
@@ -28,6 +31,9 @@
     padding: 18px 35px;
     border-radius: 5px;
     border: none;
+}
+.text-center{
+    text-align: center;
 }
 /* nav */
 nav{
@@ -75,4 +81,108 @@ nav ul{
 }
 .banar-content{
     max-width: 580px;
+}
+/* main*/
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.main-section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    
+}
+.item-description{
+    color:#474747;
+    font-weight: 600;
+    font-size: 1.75em;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+.item-title{
+    font-size: 1.75em;
+    color:#757575;
+}
+.section-title{
+    font-size: 3em;
+    color: #181818;
+}
+.section-description{
+    font-size: 1.75em;
+    color: #757575;
+}
+/*skill section style*/
+
+.skills-container{
+    display: flex;
+    gap:24px
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow:0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+/* resume section style*/
+.resume-container{
+    display: flex;
+    gap:24px;
+}
+.exprience-sub-title{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.experience-description, .exprience-sub-title{
+    color: #757575;
+}
+.resume hr{
+    margin: 30px 5px;
+}
+.exprience-title{
+    color: #757575;
+    margin-top:-10px;
+    margin-bottom:-25px;
+    
+}
+.resume-column-title{
+    
+}
+.resume-download-cv{
+    margin-top: 50px;
+}
+/* footer style*/
+footer{
+    padding: 130px 230px;
+    display: flex;
+    gap: 100px;
+}
+.footer-column{
+    width: 50%;
+}
+footer input[type="text"],footer input[type="email"]{
+    height: 45px;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 60%;
+    padding: 5px 10px;
+    margin-bottom: 25px;
+    border: none;
+}
+footer textarea{
+     height: 100px;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 60%;
+    padding: 5px 10px;
+    margin-bottom: 25px;
+    border: none;
 }
